--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gradient Descent in 3d"
+    "# Gradient Descent in 3D"
    ]
   },
   {
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "previously, we talked about how we to think about moving along a 3D cost curve."
+    "Previously, we talked about how we to think about moving along a 3D cost curve."
    ]
   },
   {
