fix readme master

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](./images/dfdx.png)"
+    "<img src=\"images/dfdx.png\" width=\"800\">"
    ]
   },
   {
@@ -313,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](./images/dfdy.png)"
+    "<img src=\"images/dfdy.png\" width=\"800\">"
    ]
   },
   {
@@ -336,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](./images/dfdx.png)"
+    "<img src=\"images/dfdx.png\" width=\"800\">"
    ]
   },
   {
@@ -374,7 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](./images/dfdy.png)"
+    "<img src=\"images/dfdy.png\" width=\"800\">"
    ]
   },
   {
@@ -406,7 +406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](./images/dfdx.png)"
+    "<img src=\"images/dfdx.png\" width=\"800\">"
    ]
   },
   {
@@ -440,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
