--- a/index.ipynb
+++ b/index.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](./images/gradientdescent.png)"
+    "<img src=\"./images/new_gradientdescent.png\" width=\"600\">"
    ]
   },
   {
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](./images/gradientdescent.png)"
+    "<img src=\"./images/new_gradientdescent.png\" width=\"600\">"
    ]
   },
   {
@@ -199,7 +199,7 @@
     "\n",
     "Remember that the function looks like the following: \n",
     "\n",
-    "![](./images/parabolayx2.png)\n",
+    "<img src=\"./images/new_parabolayx2.png\" width=\"400\">\n",
     "\n",
     "To take a derivative with respect to $x$ means to ask, how does the output change, as we make a nudge only in the $x$ direction. To express that we are nudging in the $x$ direction we say $\\frac{\\delta f}{\\delta x}$.  That symbol is the lower case delta.  We read this as taking the derivative with respect to $x$.  But it just means seeing the change in output as we nudge in the $x$ direction.  \n",
     "\n",
@@ -288,7 +288,7 @@
    "source": [
     "This can be a little mind-bending so let's go through this again for $\\frac{df}{dy}f(x, y)$ where $f(x,y) = (yx^2) $.  Once again, the 3-d graph of $f(x,y) = yx^2$ is the following: \n",
     "\n",
-    "![](./images/parabolayx2.png)"
+    "<img src=\"./images/new_parabolayx2.png\" width=\"400\">"
    ]
   },
   {
@@ -440,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
