--- a/index.ipynb
+++ b/index.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Previously, we talked about how we to think about moving along a 3D cost curve."
+    "Previously, we talked about how to think about gradient descent when moving along a 3D cost curve."
    ]
   },
   {
@@ -53,9 +53,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Understand how the process of gradient descent when altering both y-intercept and slope variables\n",
-    "* Understand what it means to take a partial derivative \n",
-    "* Understand the rule for taking partial derivatives"
+    "* Define a partial derivative\n",
+    "* Interpret visual representations of gradient descent in more than two dimensions"
    ]
   },
   {
@@ -442,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.6"
   },
   "toc": {
    "base_numbering": 1,
