--- a/index.ipynb
+++ b/index.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/new_gradientdescent.png\" width=\"600\">"
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-gradient-descent-in-3d/master/images/new_gradientdescent.png\" width=\"600\">"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](./images/slopes.png)"
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-gradient-descent-in-3d/master/images/slopes.png\" alt=\"graph comparing RSS curves for different slopes\" />"
    ]
   },
   {
@@ -149,13 +149,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/new_gradientdescent.png\" width=\"600\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "To get a sense of how this works, imagine our initial regression line places us at the back-left corner of the graph above, with a slope of 50, and y-intercept of negative 20.  Now imagine that we cannot see the rest of the graph - yet we still want to approach the minimum.  How do we do this?\n",
     "\n",
     "Once again, we feel out the slope of the graph with our feet.  Only this time, as we shift our feet, we are preparing to walk in two-dimensional space.  "
@@ -165,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](./images/traveller-stepping.jpg)\n",
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-gradient-descent-in-3d/master/images/traveller-stepping.jpg\" alt=\"hiker standing on a rock\" />\n",
     "\n",
     "So this is our approach.  We shift horizontally a little bit to determine the change in output in the right-left direction, and then we shift forward and back to determine the change in output in that direction.  From there we take the next step in the direction of the steepest descent. \n",
     "\n",
@@ -200,7 +193,7 @@
     "\n",
     "Remember that the function looks like the following: \n",
     "\n",
-    "<img src=\"./images/new_parabolayx2.png\" width=\"400\">\n",
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-gradient-descent-in-3d/master/images/new_parabolayx2.png\" width=\"400\">\n",
     "\n",
     "To take a derivative with respect to $x$ means to ask, how does the output change, as we make a nudge only in the $x$ direction. To express that we are nudging in the $x$ direction we say $\\frac{\\delta f}{\\delta x}$.  That symbol is the lower case delta.  We read this as taking the derivative with respect to $x$.  But it just means seeing the change in output as we nudge in the $x$ direction.  \n",
     "\n",
@@ -227,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](./images/tangent-liner.png)"
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-gradient-descent-in-3d/master/images/tangent-liner.png\" alt=\"tangent lines for partial derivatives\" />"
    ]
   },
   {
@@ -255,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/dfdx.png\" width=\"800\">"
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-gradient-descent-in-3d/master/images/dfdx.png\" alt=\"partial derivatives of four different functions\" width=\"800\">"
    ]
   },
   {
@@ -289,7 +282,7 @@
    "source": [
     "This can be a little mind-bending so let's go through this again for $\\frac{df}{dy}f(x, y)$ where $f(x,y) = (yx^2) $.  Once again, the 3-d graph of $f(x,y) = yx^2$ is the following: \n",
     "\n",
-    "<img src=\"./images/new_parabolayx2.png\" width=\"400\">"
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-gradient-descent-in-3d/master/images/new_parabolayx2.png\" alt=\"3d parabola\" width=\"400\">"
    ]
   },
   {
@@ -314,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/dfdy.png\" width=\"800\">"
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-gradient-descent-in-3d/master/images/dfdy.png\" alt=\"partial derivative with respect to y\" width=\"800\">"
    ]
   },
   {
@@ -337,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/dfdx.png\" width=\"800\">"
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-gradient-descent-in-3d/master/images/dfdx.png\" alt=\"partial derivatives of four different functions\" width=\"800\">"
    ]
   },
   {
@@ -375,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/dfdy.png\" width=\"800\">"
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-gradient-descent-in-3d/master/images/dfdy.png\" alt=\"partial derivative with respect to y\" width=\"800\">"
    ]
   },
   {
@@ -407,7 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/dfdx.png\" width=\"800\">"
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-gradient-descent-in-3d/master/images/dfdx.png\" alt=\"partial derivatives of four different functions\" width=\"800\">"
    ]
   },
   {
@@ -427,9 +420,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (learn-env)",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -441,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
